tests/invalid/Remainder_Invalid_2.whiley
function f(int x, byte y) -> int:
    return x % y
